
Whiteboard CHANGES
------------------

Not to mention all bugfixes and rewrites.

Coccinella-0.94.7 (04????): 	Short summary --

	- separating actual whiteboard code from rest.
	- uses resource database for everything, also images

Coccinella-0.94.6 (03????): 	Short summary --

	- internal http server in its own thread if available
	- better redo/undo functionality
	- fixed stacking inconsistencies when sharing images
	- background image in tree widget (roster)
	- better handling of event sounds
	- new addon structure for extensions
	- fixed cut/copy/paste menus on macs
	- files transported were not always cached, now fixed
	- incoming files will now have there file names encoded to
	  avoid name conflicts
	- added games item with chess as a first example
	- added (primitive) printing support for Mac OS X
	- sorted out how to handle 2/3-tier jids in chats and messages
	- reworked button tray into a mega widget


Coccinella-0.94.5 (0309??): 	Short summary --

	- jid completion entry
	- setup assistant with free servers info dialog
	- fixed really nasty bug where the ip number was not set correctly
 	  on systems with multiple network interfaces, typically when 
	  using ppp
        - removed smoothness option, added smooth operation of polygons
	- added auto update mechanism
	- added chat history dialog
	- reworked internals of the inbox, new file format
	- plugin control preference panel
	- much improved feedback with "broken image"
	- better handling of passive http transports
	- changed name of main file to Coccinella.tcl


Whiteboard-0.94.4 (030616): 	Short summary --

	- all jabber UI elements moved from whiteboard window to roster window
	- get side of file transport rewritten from scratch
	- MUC support at client level
	- a plugin structure for the whiteboard


Whiteboard-0.94.3 (0301??): 	Short summary --

	- whiteboards now multiinstance for jabber; send single whiteboard
	  messages, each chat and groupchat in separate whiteboards